[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/StartScreen.gd" id="1"]

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.25
anchor_top = 0.15
anchor_right = 0.75
anchor_bottom = 0.85
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_minimum_size = Vector2(0, 0)

[node name="Title" type="Label" parent="Panel/VBox"]
text = "Match-3 CoPilot"
label_settings = null
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Panel/VBox"]
text = "Pick up to three boosters, then start"
horizontal_alignment = 1

[node name="BoosterList" type="VBoxContainer" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 200)

[node name="CounterLabel" type="Label" parent="Panel/VBox"]
text = "Selected: 0 / 3"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="Panel/VBox"]
text = "Start Game"

[connection signal="pressed" from="Panel/VBox/StartButton" to="." method="_on_StartButton_pressed"]
